--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
----
+ï»¿---
 layout default
-title ÎÒµÄBlog
+title æˆ‘çš„Blog
 ---
 h2{{ page.title }}h2
-p×îĞÂÎÄÕÂp
+pæœ€æ–°æ–‡ç« p
 ul
 {% for post in site.posts %}
 li{{ post.date  date_to_string }} a href={{ site.baseurl }}{{ post.url }}{{ post.title }}ali
