--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-ï»¿---
+---
 layout default
-title æˆ‘çš„Blog
+title ÎÒµÄBlog
 ---
 h2{{ page.title }}h2
-pæœ€æ–°æ–‡ç« p
+p×îĞÂÎÄÕÂp
 ul
 {% for post in site.posts %}
 li{{ post.date  date_to_string }} a href={{ site.baseurl }}{{ post.url }}{{ post.title }}ali
